--- a/src/popup.css
+++ b/src/popup.css
@@ -24,11 +24,16 @@ li {
   display: flex;
   justify-content: space-between;
   padding: 10px 5px 10px 5px;
+  background-color: inherit;
   border-bottom: 1px solid #7084b5;
   border-left: 1px solid #7084b5;
   border-right: 1px solid #7084b5;
   &&:first-child{
     border-top: 1px solid #7084b5;
+  }
+
+  &&:hover {
+    background-color: #7084b5;
   }
 }
 
@@ -41,11 +46,22 @@ a {
 .deleteButton {
   display: flex;
   justify-content: center;
+  align-items: center;
+  align-content: center;
   color: #DFE3EE;
   background-color: #ca1717;
-  border: none;
+  border: 1px solid #af1d1d;
   height: 1rem;
   width: 1rem;
+  cursor: pointer;
+
+  &&:hover {
+    background-color: #771111;
+    border: 1px solid #771111;
+  }
+}
+
+.coordsListItem {
   cursor: pointer;
 }
 
@@ -61,6 +77,10 @@ a {
   color: inherit;
   cursor: pointer;
   padding: 10px 10px 10px 10px;
+
+  &&:hover {
+    background-color: #2c4885;
+  }
 }
 
 #toggleCoordsButton{
@@ -81,4 +101,7 @@ a {
 
 #addCoordInput {
   outline-style: none;
+  border: none;
+  border-radius: 0;
+
 }
